<resources>
    <string name="app_name">BlackWhiteEditor</string>
    <string name="logo">Logo</string>
    <string name="create_new_layout">Создать новый Макет</string>
    <string name="open_new_image">Открыть Изображение</string>
    <string name="select_layout">Выберите Макет</string>
    <string name="no_created_layouts">Нет созданных элементов</string>
    <string name="name">Name</string>
    <string name="image_content">image content</string>
    <string name="remove_layout">remove layout</string>
    <string name="date">date</string>
    <string name="button_back">button back</string>
    <string name="increasing">Увеличение</string>
    <string name="button_download">button download</string>
    <string name="return_last_change">return last change</string>
    <string name="prompt_increase_data">100%</string>
    <string name="return_last_change_forward">return last change forward</string>
</resources>