<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#141414"
    tools:context=".presentation.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_tools_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#101010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:padding="3dp"
            android:src="@drawable/baseline_back_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            android:contentDescription="@string/button_back" />

        <ImageView
            android:id="@+id/btn_download"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="#101010"
            android:padding="3dp"
            android:src="@drawable/baseline_download_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/button_download" />

        <TextView
            android:id="@+id/txt_increase"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/increasing"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23000002" />

        <TextView
            android:id="@+id/txt_increase_data"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/prompt_increase_data"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_increase"
            app:layout_constraintStart_toStartOf="@+id/txt_increase"
            app:layout_constraintTop_toBottomOf="@+id/txt_increase"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_btn_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_return_action_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:rotationY="181"
                android:src="@drawable/baseline_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                android:contentDescription="@string/return_last_change" />

            <ImageView
                android:id="@+id/btn_return_action_forward"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:src="@drawable/baseline_back"
                app:layout_constraintBottom_toBottomOf="@+id/btn_return_action_back"
                app:layout_constraintEnd_toStartOf="@+id/btn_return_action_back"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_return_action_back"
                app:tint="@color/white"
                android:contentDescription="@string/return_last_change_forward" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_tools_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#101010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <include
            android:id="@+id/tool_bar_bottom_main"
            layout="@layout/tool_bar_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.albedo.blackwhiteeditor.domain.services.drawer.PaintView
        android:id="@+id/container_edit_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/container_tools_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_tools_top">

    </com.albedo.blackwhiteeditor.domain.services.drawer.PaintView>

</androidx.constraintlayout.widget.ConstraintLayout>