<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:theme="@android:style/Theme.Black.NoTitleBar">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <FrameLayout
        android:id="@+id/container_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_layout"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_logo"
        app:layout_constraintStart_toStartOf="@+id/img_logo"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintVertical_bias="0.06999999" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container_btn_create_new_layout"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="#E8E8E8"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/btn_create_new_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/create_new_layout"
            android:textColor="#000000"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/container_btn_open_new_image"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#E8E8E8"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/container_btn_create_new_layout"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/btn_open_new_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/open_new_image"
            android:textColor="#000000"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_rsl_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:background="#D6D6D6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_btn_create_new_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rsl_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noElementsToShowBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8E8E8"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_title_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_created_layouts"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>